refactor(order-service): align saga SSE emitter lifecycle, fix event handler verification, and update tests
- Update OrderSagaEventListener to send and complete SSE emitters on terminal saga failure states (PAYMENT_FAILED, ORDER_CANCELLED).
- Fix parameter ordering for signature verification in PaymentInitiatedEventHandler and update corresponding unit tests.
- Update OrderSagaService, CancellationReason, and associated integration tests for order cancellation flows.
- Adjust main.tf and SchemaRegistryWarmer for schema registration and topic setup.
- Update README.md to document SSE event states, signature verification, and service deep-dives.